--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "./src/test.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "start":"npm run build",
     "build": "webpack-dev-server --mode development --content-base ./src/",
     "build:prod": "webpack -p"
   },
